feature(UI): add examples panle

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
           <button id="btn-reset">Reset</button>
         </div>
       </div>
+
+      <div class="graph-examples"></div>
     </main>
   </div>
 </body>
