feature(UI): add mobile layout

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
     </header>
 
     <main class="graph-painter">
-      <canvas id="graph-canvas" width="500" height="400"></canvas>
+      <div class="canvas-section">
+        <h2>Canvas</h2>
+        <canvas id="graph-canvas" width="500" height="400"></canvas>
+      </div>
 
       <div class="graph-controller">
         <div class="graph-input-row">
@@ -41,7 +44,10 @@
         </div>
       </div>
 
-      <div class="graph-examples"></div>
+      <div class="example-section">
+        <h2>Graph Examples</h2>
+        <div class="graph-examples"></div>
+      </div>
     </main>
   </div>
 </body>
